--- a/spaceship-titanic.ipynb
+++ b/spaceship-titanic.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38a9e09d",
+   "id": "d3d20502",
    "metadata": {
     "papermill": {
-     "duration": 0.011842,
-     "end_time": "2022-03-17T16:37:15.180608",
+     "duration": 0.012244,
+     "end_time": "2022-03-18T08:12:10.729944",
      "exception": false,
-     "start_time": "2022-03-17T16:37:15.168766",
+     "start_time": "2022-03-18T08:12:10.717700",
      "status": "completed"
     },
     "tags": []
@@ -20,22 +20,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b222b93d",
+   "id": "8ac48274",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-03-17T16:37:15.207444Z",
-     "iopub.status.busy": "2022-03-17T16:37:15.205594Z",
-     "iopub.status.idle": "2022-03-17T16:37:17.904143Z",
-     "shell.execute_reply": "2022-03-17T16:37:17.903343Z",
-     "shell.execute_reply.started": "2022-03-17T16:07:42.220918Z"
+     "iopub.execute_input": "2022-03-18T08:12:10.757227Z",
+     "iopub.status.busy": "2022-03-18T08:12:10.756030Z",
+     "iopub.status.idle": "2022-03-18T08:12:13.412155Z",
+     "shell.execute_reply": "2022-03-18T08:12:13.410983Z",
+     "shell.execute_reply.started": "2022-03-18T08:08:39.246016Z"
     },
     "papermill": {
-     "duration": 2.711982,
-     "end_time": "2022-03-17T16:37:17.904305",
+     "duration": 2.671007,
+     "end_time": "2022-03-18T08:12:13.412334",
      "exception": false,
-     "start_time": "2022-03-17T16:37:15.192323",
+     "start_time": "2022-03-18T08:12:10.741327",
      "status": "completed"
     },
     "tags": []
@@ -67,13 +67,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc8debe0",
+   "id": "291b211d",
    "metadata": {
     "papermill": {
-     "duration": 0.008499,
-     "end_time": "2022-03-17T16:37:17.921778",
+     "duration": 0.011189,
+     "end_time": "2022-03-18T08:12:13.435657",
      "exception": false,
-     "start_time": "2022-03-17T16:37:17.913279",
+     "start_time": "2022-03-18T08:12:13.424468",
      "status": "completed"
     },
     "tags": []
@@ -85,20 +85,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "07c6a883",
+   "id": "d53a4b51",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-17T16:37:17.944805Z",
-     "iopub.status.busy": "2022-03-17T16:37:17.944095Z",
-     "iopub.status.idle": "2022-03-17T16:37:18.046443Z",
-     "shell.execute_reply": "2022-03-17T16:37:18.045804Z",
-     "shell.execute_reply.started": "2022-03-17T16:09:34.314463Z"
+     "iopub.execute_input": "2022-03-18T08:12:13.461574Z",
+     "iopub.status.busy": "2022-03-18T08:12:13.460952Z",
+     "iopub.status.idle": "2022-03-18T08:12:13.564023Z",
+     "shell.execute_reply": "2022-03-18T08:12:13.564541Z",
+     "shell.execute_reply.started": "2022-03-18T08:08:42.619919Z"
     },
     "papermill": {
-     "duration": 0.116047,
-     "end_time": "2022-03-17T16:37:18.046578",
+     "duration": 0.11777,
+     "end_time": "2022-03-18T08:12:13.564709",
      "exception": false,
-     "start_time": "2022-03-17T16:37:17.930531",
+     "start_time": "2022-03-18T08:12:13.446939",
      "status": "completed"
     },
     "tags": []
@@ -269,20 +269,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7f0690b",
+   "id": "fc5856a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-17T16:37:18.076390Z",
-     "iopub.status.busy": "2022-03-17T16:37:18.075521Z",
-     "iopub.status.idle": "2022-03-17T16:37:18.106671Z",
-     "shell.execute_reply": "2022-03-17T16:37:18.105910Z",
-     "shell.execute_reply.started": "2022-03-17T16:09:53.298646Z"
+     "iopub.execute_input": "2022-03-18T08:12:13.591915Z",
+     "iopub.status.busy": "2022-03-18T08:12:13.591238Z",
+     "iopub.status.idle": "2022-03-18T08:12:13.629299Z",
+     "shell.execute_reply": "2022-03-18T08:12:13.628708Z",
+     "shell.execute_reply.started": "2022-03-18T08:08:42.744184Z"
     },
     "papermill": {
-     "duration": 0.050493,
-     "end_time": "2022-03-17T16:37:18.106810",
+     "duration": 0.052523,
+     "end_time": "2022-03-18T08:12:13.629437",
      "exception": false,
-     "start_time": "2022-03-17T16:37:18.056317",
+     "start_time": "2022-03-18T08:12:13.576914",
      "status": "completed"
     },
     "tags": []
@@ -428,20 +428,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "843d8c88",
+   "id": "c29cd6e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-17T16:37:18.130558Z",
-     "iopub.status.busy": "2022-03-17T16:37:18.129620Z",
-     "iopub.status.idle": "2022-03-17T16:37:18.162378Z",
-     "shell.execute_reply": "2022-03-17T16:37:18.162883Z",
-     "shell.execute_reply.started": "2022-03-17T16:21:52.944799Z"
+     "iopub.execute_input": "2022-03-18T08:12:13.667709Z",
+     "iopub.status.busy": "2022-03-18T08:12:13.667014Z",
+     "iopub.status.idle": "2022-03-18T08:12:13.693767Z",
+     "shell.execute_reply": "2022-03-18T08:12:13.694668Z",
+     "shell.execute_reply.started": "2022-03-18T08:08:42.793134Z"
     },
     "papermill": {
-     "duration": 0.046068,
-     "end_time": "2022-03-17T16:37:18.163064",
+     "duration": 0.052397,
+     "end_time": "2022-03-18T08:12:13.694947",
      "exception": false,
-     "start_time": "2022-03-17T16:37:18.116996",
+     "start_time": "2022-03-18T08:12:13.642550",
      "status": "completed"
     },
     "tags": []
@@ -506,13 +506,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139d49d8",
+   "id": "88bd9650",
    "metadata": {
     "papermill": {
-     "duration": 0.010288,
-     "end_time": "2022-03-17T16:37:18.183910",
+     "duration": 0.012584,
+     "end_time": "2022-03-18T08:12:13.721345",
      "exception": false,
-     "start_time": "2022-03-17T16:37:18.173622",
+     "start_time": "2022-03-18T08:12:13.708761",
      "status": "completed"
     },
     "tags": []
@@ -524,20 +524,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ae44fdc3",
+   "id": "5f91f4c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-17T16:37:18.223079Z",
-     "iopub.status.busy": "2022-03-17T16:37:18.219324Z",
-     "iopub.status.idle": "2022-03-17T16:37:18.237027Z",
-     "shell.execute_reply": "2022-03-17T16:37:18.236359Z",
-     "shell.execute_reply.started": "2022-03-17T16:31:35.100005Z"
+     "iopub.execute_input": "2022-03-18T08:12:13.750908Z",
+     "iopub.status.busy": "2022-03-18T08:12:13.750221Z",
+     "iopub.status.idle": "2022-03-18T08:12:13.780586Z",
+     "shell.execute_reply": "2022-03-18T08:12:13.781110Z",
+     "shell.execute_reply.started": "2022-03-18T08:08:42.833681Z"
     },
     "papermill": {
-     "duration": 0.042986,
-     "end_time": "2022-03-17T16:37:18.237167",
+     "duration": 0.046874,
+     "end_time": "2022-03-18T08:12:13.781282",
      "exception": false,
-     "start_time": "2022-03-17T16:37:18.194181",
+     "start_time": "2022-03-18T08:12:13.734408",
      "status": "completed"
     },
     "tags": []
@@ -622,15 +622,88 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea16e00b",
+   "cell_type": "markdown",
+   "id": "dd715b73",
    "metadata": {
     "papermill": {
-     "duration": 0.010671,
-     "end_time": "2022-03-17T16:37:18.258786",
+     "duration": 0.012944,
+     "end_time": "2022-03-18T08:12:13.807400",
      "exception": false,
-     "start_time": "2022-03-17T16:37:18.248115",
+     "start_time": "2022-03-18T08:12:13.794456",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Plan for replacing missing values\n",
+    "\n",
+    "* HomePlanet: Since most of the data is Earth, we will replace missing values with Earth.\n",
+    "* Destination: Since most of the data is Earth, we will replace the missing values with TRAPPIST-1e\n",
+    "* VIP: Most of them are False so we will replace the missing values with False.\n",
+    "* Cabin: Cabin consists of Deck, Num, Side. It can be divided and analyzed\n",
+    "* CryoSleep: Missing values will be replaced as False."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d87297",
+   "metadata": {
+    "papermill": {
+     "duration": 0.012851,
+     "end_time": "2022-03-18T08:12:13.833483",
+     "exception": false,
+     "start_time": "2022-03-18T08:12:13.820632",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Handling Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d80e1630",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-18T08:12:13.867843Z",
+     "iopub.status.busy": "2022-03-18T08:12:13.867132Z",
+     "iopub.status.idle": "2022-03-18T08:12:13.899645Z",
+     "shell.execute_reply": "2022-03-18T08:12:13.900154Z",
+     "shell.execute_reply.started": "2022-03-18T08:08:42.874093Z"
+    },
+    "papermill": {
+     "duration": 0.053595,
+     "end_time": "2022-03-18T08:12:13.900349",
+     "exception": false,
+     "start_time": "2022-03-18T08:12:13.846754",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "Missing_features = ['FoodCourt', 'Spa', 'ShoppingMall', 'RoomService', 'VRDeck', 'Cabin', 'CryoSleep', 'VIP', 'HomePlanet', 'Destination', 'Age']\n",
+    "for feature in Missing_features:\n",
+    "    if feature == 'Age':\n",
+    "        fill = train[feature].mean()\n",
+    "    else:\n",
+    "        fill = train[feature].value_counts().index[0]\n",
+    "    train[feature] = train[feature].fillna(fill)\n",
+    "    test[feature] = test[feature].fillna(fill)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abd9cc4d",
+   "metadata": {
+    "papermill": {
+     "duration": 0.012952,
+     "end_time": "2022-03-18T08:12:13.926510",
+     "exception": false,
+     "start_time": "2022-03-18T08:12:13.913558",
      "status": "completed"
     },
     "tags": []
@@ -659,14 +732,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.506516,
-   "end_time": "2022-03-17T16:37:19.079909",
+   "duration": 13.939584,
+   "end_time": "2022-03-18T08:12:14.750699",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-03-17T16:37:05.573393",
+   "start_time": "2022-03-18T08:12:00.811115",
    "version": "2.3.3"
   }
  },
